  - Added config option "raw_mouse_input" (in [sdl]
    section; SDL2 builds only) to bypass the operating
    system's mouse acceleration & sensitivity settings.
    Implemented by NicknineTheEagle.
  - Added config option "startquiet" (in [dos] section)
    which when set to true will silence the information
    messages before launching Windows programs to run
    on the Windows host. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4371: Fix regression in Clue: Master Detective.
    - r4370: As an adjunct to r4369, make the reference
      counts of standard device handles equivalent to
      those of real DOS.
    - r4369: Compatible side-effect behavior of DOS in
      the file close function.
    - r4368: Improve error codes for some DOS file functions.
    - r4367: Change FPU_FBST to only write 18 decimals
      instead of the wrongly 19, this makes it possible
      to switch 64 integers which in turn fixes some
      rounding issues. (jmarsh)
    - r4282,r4283: Switch to a different way to calculate
      DBOPL table offsets.
    - r4280: Prevent GenerateDMASound from running with
      input of 0.
    - r4279: Remove DMA_TRANSFEREND and replace with
      DMA_MASKED.
    - r4277: Remove cases not needed after r4276
    - r4276: Remove defunct code related to the initial
      display mode of the system BIOS during video mode
      changes.
    - r4274: fix externals.
    - r4273: Make frameskip an integer.
    - r4269: Use fabsf when return value is a float.
      Small warning fix.
    - r4265: Some more cleanups and memleak fixes.
    - r4264: Pick some lowhanging fruit. (some memory
      leaks and unused variables)
    - r4262: missed one
    - r4261: These actually use float as input.
    - r4258: Rename bios tester to biostest and make it
      debug only to avoid people trying to load real
      bioses.
    - r4257: Add simple program that allows you to boot
      into a bios image for running cpu tester bios.
0.83.6