@@ -1683,6 +1683,7 @@ void SHELL_Init() {
 #if defined(WIN32) && !defined(HX_DOS)
     mainMenu.get_item("dos_win_autorun").check(winautorun).enable(true).refresh_item(mainMenu);
     mainMenu.get_item("dos_win_wait").check(startwait).enable(true).refresh_item(mainMenu);
+    mainMenu.get_item("dos_win_quiet").check(startquiet).enable(true).refresh_item(mainMenu);
 #endif
 }
 
